Protip de logica-booleana

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <!-- <script src="assets/js/valor-referencia.js"></script>  -->
 
-    <script src="assets/js/if-else.js"></script> 
+    <!-- <script src="assets/js/if-else.js"></script>  -->
+
+    <script src="assets/js/logica-booleana.js"></script> 
+
 
 
 
