--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <!-- <script src="assets/js/if-else.js"></script>  -->
 
-    <script src="assets/js/logica-booleana.js"></script> 
+    <!-- <script src="assets/js/logica-booleana.js"></script>  -->
+    <script src="assets/js/operador-ternario.js"></script> 
+
 
 
 
