--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <!-- <script src="assets/js/logica-booleana.js"></script>  -->
     <!-- <script src="assets/js/operador-ternario.js"></script>  -->
-    <script src="assets/js/protip-ternario.js"></script> 
+    <!-- <script src="assets/js/protip-ternario.js"></script>  -->
+    <script src="assets/js/switch.js"></script> 
+
 
 
 
